--- a/libs/utils/test_metric.ipynb
+++ b/libs/utils/test_metric.ipynb
@@ -17,16 +17,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.float32\n"
+     ]
+    }
+   ],
    "source": [
-    "gt_mask = Image.open(\"/data1/zhaofanghan/Advanced_ML_Coursework/dataset/test/GT/camourflage_01055.png\").convert(\"L\")\n",
-    "pred_mask = Image.open(\"/data1/zhaofanghan/Advanced_ML_Coursework/dataset/test/GT/camourflage_01055.png\").convert(\"L\")\n",
+    "gt_mask = Image.open(\"/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/dataset/test/GT/camourflage_01057.png\").convert(\"L\")\n",
+    "pred_mask = Image.open(\"/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/dataset/test/GT/camourflage_01057.png\").convert(\"L\")\n",
     "transform = transforms.ToTensor()\n",
     "\n",
-    "gt_mask = transform(gt_mask).squeeze(0).to(device)\n",
-    "pred_mask = transform(pred_mask).squeeze(0).to(device)"
+    "gt_mask = transform(gt_mask).squeeze(0).to(dtype=torch.long).to(torch.float32)\n",
+    "pred_mask = transform(pred_mask).squeeze(0).to(torch.float64).to(torch.float32)"
    ]
   },
   {
@@ -62,7 +70,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "moment-detr",
+   "display_name": "glp",
    "language": "python",
    "name": "python3"
   },
@@ -76,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
