Add test dataset handling and visualization improvements; update configuration for validation and test sizes

--- a/libs/utils/visualization.ipynb
+++ b/libs/utils/visualization.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,15 +27,7 @@
     }
    ],
    "source": [
-    "import wandb\n",
-    "\n",
-    "masked_image = wandb.Image(\n",
-    "    image,\n",
-    "    mask={\n",
-    "        \"prediction\": {\"mask_data\": pred_mask}\n",
-    "        \"groud_truth\": {\"mask_data\": gt_mask}\n",
-    "    }\n",
-    ")"
+    "import wandb"
    ]
   },
   {
@@ -52,24 +44,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "def convert_image_mask(image, mask):\n",
-    "    \"\"\"\n",
-    "    image 是一个(1,3,H,W)，值位于0到1之间的张量，类型为torch.float32\n",
-    "    mask 是一个(1,H,W)，值位于0到1之间的张量，类型为torch.int64\n",
-    "    \n",
-    "    需要将image变成(H,W,3)的numpy数组，值位于0到255之间，类型为np.uint8\n",
-    "    需要将mask变成(H,W)的numpy数组，值位于0到255之间，类型为np.uint8\n",
-    "    \"\"\"\n",
-    "    # 检查\n",
-    "    assert image.dim() == 4 and image.size(0) == 1 and image.size(1) == 3\n",
-    "    assert mask.dim() == 3 and mask.size(0) == 1\n",
-    "    assert image.dtype == torch.float32 and mask.dtype == torch.int64\n",
-    "    assert image.min() >= 0 and image.max() <= 1\n",
-    "    assert mask.min() >= 0 and mask.max() <= 1\n",
-    "    \n",
-    "    image = image.squeeze(0).permute(1,2,0).mul(255).byte().numpy()\n",
-    "    mask = mask.squeeze(0).mul(255).byte().numpy()\n",
-    "    return image, mask"
+    "\n"
    ]
   },
   {
@@ -89,14 +64,37 @@
    "outputs": [],
    "source": [
     "def crf_process(model, image):\n",
+    "    import torch.nn.functional as F\n",
+    "    \n",
+    "    # Get model prediction\n",
     "    logit = model(image)\n",
     "    \n",
+    "    # Resize and get probabilities\n",
+    "    H, W = image.shape[-2:]\n",
     "    logit = F.interpolate(logit, size=(H, W), mode=\"bilinear\", align_corners=False)\n",
-    "    prob = F.softmax(logit, dim=1)[0].numpy()\n",
-    "\n",
-    "    image = image.astype(np.uint8).transpose(1, 2, 0)\n",
-    "    prob = postprocessor(image, prob)\n",
-    "    label = np.argmax(prob, axis=0)"
+    "    prob = F.softmax(logit, dim=1)[0].cpu().numpy()\n",
+    "    \n",
+    "    # Convert image for CRF\n",
+    "    img_np = (image[0].permute(1,2,0).cpu().numpy() * 255).astype(np.uint8)\n",
+    "    \n",
+    "    return prob, img_np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_masks(image, pred_mask, gt_mask):\n",
+    "    \"\"\"Visualize image and masks using wandb\"\"\"\n",
+    "    return wandb.Image(\n",
+    "        image,\n",
+    "        masks={\n",
+    "            \"prediction\": {\"mask_data\": pred_mask},\n",
+    "            \"ground_truth\": {\"mask_data\": gt_mask}\n",
+    "        }\n",
+    "    )\n"
    ]
   }
  ],
