Update report files: add new references, remove unused bibliography, and regenerate auxiliary files And finnaly about to complete

--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,29 @@
+@inproceedings{Girshick2015FastR,
+  title  = {Fast R-CNN},
+  author = {Ross B. Girshick},
+  year   = {2015},
+  url    = {https://api.semanticscholar.org/CorpusID:206770307}
+}
+
+@article{Girshick2013RichFH,
+  title   = {Rich Feature Hierarchies for Accurate Object Detection and Semantic Segmentation},
+  author  = {Ross B. Girshick and Jeff Donahue and Trevor Darrell and Jitendra Malik},
+  journal = {2014 IEEE Conference on Computer Vision and Pattern Recognition},
+  year    = {2013},
+  pages   = {580-587},
+  url     = {https://api.semanticscholar.org/CorpusID:215827080}
+}
+
+@article{Ren2015FasterRT,
+  title   = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+  author  = {Shaoqing Ren and Kaiming He and Ross B. Girshick and Jian Sun},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year    = {2015},
+  volume  = {39},
+  pages   = {1137-1149},
+  url     = {https://api.semanticscholar.org/CorpusID:10328909}
+}
+
 @article{Le2019AnabranchNF,
   title   = {Anabranch network for camouflaged object segmentation},
   author  = {Trung-Nghia Le and Tam V. Nguyen and Zhongliang Nie and Minh-Triet Tran and Akihiro Sugimoto},
@@ -103,3 +129,4 @@
   pages   = {834-848},
   url     = {https://api.semanticscholar.org/CorpusID:3429309}
 }
+
